Prevent imagery datepicker from being cut off

--- a/src/css/loader.styl
+++ b/src/css/loader.styl
@@ -23,6 +23,7 @@
   &.imagery
     background rgba(225,225,225,0.25)
     position relative
+    z-index 1
     .app-loader__spinner
       position relative
       height 50px
