--- a/src/css/modal.styl
+++ b/src/css/modal.styl
@@ -508,7 +508,6 @@
   height 285px
   -webkit-box-shadow 0 1px 3px rgba(85,85,85,0.25)
   box-shadow 0 1px 3px rgba(85,85,85,0.25)
-  overflow hidden
 
   .flex
     display flex
